🐛 fix(layout): Fix the submenu misalignment problem

--- a/packages/layout/src/SiderMenu/index.less
+++ b/packages/layout/src/SiderMenu/index.less
@@ -51,8 +51,11 @@
   }
 
   ul.@{ant-prefix}-menu-sub {
-    li.@{ant-prefix}-menu-item .@{ant-prefix}-pro-menu-item {
-      padding-left: 8px;
+    li.@{ant-prefix}-menu-item,
+    li.@{ant-prefix}-menu-submenu {
+      .@{ant-prefix}-pro-menu-item {
+        padding-left: 8px;
+      }
     }
   }
 
